[package]
name = "x509-parser"
version = "0.17.0"
description = "Parser for the X.509 v3 format (RFC 5280 certificates)"
license = "MIT OR Apache-2.0"
keywords = ["X509","Certificate","parser","nom"]
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
homepage = "https://github.com/rusticata/x509-parser"
repository = "https://github.com/rusticata/x509-parser.git"
categories = ["parser-implementations", "cryptography"]
readme = "README.md"
edition = "2018"
rust-version = "1.67.1"

include = [
  "CHANGELOG.md",
  "LICENSE-*",
  "README.md",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "src/*.rs",
  "src/extensions/*.rs",
  "src/validate/*.rs",
  "src/visitor/*.rs",
  "tests/*.rs",
  "assets/*.crl",
  "assets/*.csr",
  "assets/*.der",
  "assets/*.pem",
  "assets/crl-ext/*.der",
  "examples/*.rs"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
verify = ["ring"]
validate = []

[dependencies]
asn1-rs = { version = "0.7.0", features=["datetime"] }
data-encoding = "2.2.1"
lazy_static = "1.4"
nom = "7.0"
oid-registry = { version="0.8", features=["crypto", "x509", "x962"] }
rusticata-macros = "4.0"
ring = { version="0.17.7", optional=true }
der-parser = { version = "10.0", features=["bigint"] }
thiserror = "2.0"
time = { version="0.3.35", features=["formatting"] }
